// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Should load correctly 1`] = `
<body>
  <div>
    <main
      class="loading_component"
    >
      <div
        class="loader"
      >
        <div
          class="bar"
        />
      </div>
      <img
        alt="Loading Logo"
        class="logo"
        src="loading.png"
      />
    </main>
  </div>
</body>
`;

exports[`Details Should load data after loading 1`] = `
<body>
  <div>
    <section
      class="cocktail-section"
    >
      <a
        class="btn"
        href="/cocktails"
      >
        Back Home
      </a>
      <h2
        class="title"
      >
        mockDrink
      </h2>
      <div
        class="drink"
      >
        <img
          alt="mockThumb"
          src="mockThumb"
        />
        <div
          class="details"
        >
          <p>
            <span
              class="drink-data"
            >
              name :
            </span>
             
            mockDrink
          </p>
          <p>
            <span
              class="drink-data"
            >
              category :
            </span>
             
            mockCategory
          </p>
          <p>
            <span
              class="drink-data"
            >
              info :
            </span>
             
            mockInfo
          </p>
          <p>
            <span
              class="drink-data"
            >
              glass :
            </span>
             
            mockGlass
          </p>
          <p>
            <span
              class="drink-data"
            >
              instructions :
            </span>
             
            mockInstructions
          </p>
          <p>
            <span
              class="drink-data"
            >
              ingredients :
            </span>
            <span>
               
              mockIngredient1
            </span>
            <span>
               
              mockIngredient2
            </span>
            <span>
               
              mockIngredient3
            </span>
            <span>
               
              mockIngredient4
            </span>
          </p>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Details Should show error 1`] = `
<body>
  <div>
    <main
      class="error_component"
    >
      <img
        alt="Error page image"
        src="error.svg"
      />
      <footer>
        <h2>
          Error occurred
        </h2>
      </footer>
    </main>
  </div>
</body>
`;

exports[`Details Should show message if no cocktails found 1`] = `
<body>
  <div>
    <section
      class="cocktail-section"
    >
      <a
        class="btn"
        href="/cocktails"
      >
        Back Home
      </a>
      <h2>
        Cocktail details not found
      </h2>
    </section>
  </div>
</body>
`;
